# Rust

./: .gitignore  .rustfmt.toml  Readme.md
rs-DuplicateDetector/: .gitignore  Cargo.toml  hash-cache-pretty.json  hash-cache.json
rs-DuplicateDetector/src/: cli.rs  connection.rs  core.rs  db.rs  hash.rs  hash_concurrent.rs  lib.rs  main.rs  progress.rs  schema.sql  search.rs  status_line.rs
rs-DuplicateDetector/src/core/: ansi.rs  collections.rs  error.rs  fs.rs  sync.rs  xattr.rs
rs-DuplicateDetector/src/core/collections/: nonempty.rs  tinyvec.rs
rs-ForthRepl/: Cargo.toml  Readme.md  std  std.rpnl
rs-ForthRepl/examples/: demo.rpnl
rs-ForthRepl/src/: forth.rs  help.txt  lib.rs  main.rs  prelude.rs
rs-ForthRepl/src/core/: mod.rs
rs-ForthRepl/src/forth/: builtins.rs  dictionary.rs  env.rs  error.rs  host.rs  interpreter.rs  mod.rs  parser.rs  stack.rs  state.rs  value.rs  word.rs
rs-ForthRepl/src/forth/grammar/: ast.rs  error.rs  forestry.rs  mod.rs  parser.rs  result.rs  scanner.rs  token.rs
rs-ForthRepl/src/parsing/: error.rs  mod.rs  parser.rs  result.rs  scanner.rs
rs-ForthRepl/src/util/: char_index.rs  mod.rs
rs-ForthRepl/tests/: integration.rs
rs-HaskellStyleFormatter/: Cargo.toml
rs-HaskellStyleFormatter/src/: lib.rs  main.rs
rs-MidiMarkupLanguage/: Cargo.toml
rs-MidiMarkupLanguage/src/: lib.rs  main.rs
rs-MidiMarkupLanguage/src/core/: int.rs  ratio.rs
rs-MidiMarkupLanguage/src/domain/: midi.rs  midi_file.rs  midi_ux.rs  primitive.rs
rs-MidiMarkupLanguage/src/midi/: common.rs  int.rs  streaming.rs
rs-RayTracer/: Cargo.toml
rs-RayTracer/src/: algebra.rs  lib.rs  main.rs  prelude.rs
rs-RayTracer/src/backend/: mod.rs
rs-RayTracer/src/backend/shaders/: mod.rs  shader.vert
rs-RayTracer/src/geometry/: mod.rs
rs-RayTracer/src/materials/: mod.rs
rs-RayTracer/src/tracer/: mod.rs
rs-SerdeDataFormatComp/: Cargo.toml
rs-SerdeDataFormatComp/src/: main.rs
rs-SrpgArena/: Cargo.toml
rs-SrpgArena/src/: bounded.rs  error.rs  game.rs  main.rs
rs-SrpgArena2/: Cargo.toml
rs-SrpgArena2/src/: app.rs  core.rs  events.rs  game.rs  idea.rs  idea3.rs  items.rs  lib.rs  main.rs  prelude.rs  rng.rs  stats.rs
rs-SrpgArena2/src/assets/fonts/: mod.rs
rs-SrpgArena2/src/core/: genmap.rs  mod.rs  slice.rs
rs-SrpgArena2/src/ideas/: _1.rs  _2.rs  _3.rs
rs-VoxelSandBox/: Cargo.toml
rs-VoxelSandBox/assets/textures/: fontmap.json  fontmap.txt
rs-VoxelSandBox/src/: app.rs  camera.rs  gl_types.rs  input.rs  lib.rs  main.rs  manifest.rs  prelude.rs  program.rs
rs-VoxelSandBox/src/assets/: img.rs  mod.rs
rs-VoxelSandBox/src/core/: fused_shader.rs  iter.rs  memory_usage.rs  mod.rs  spreading.rs
rs-VoxelSandBox/src/display/: mod.rs  state.rs
rs-VoxelSandBox/src/display/chunk/: chunk.glsl  mod.rs  renderer.rs
rs-VoxelSandBox/src/display/screen/: mod.rs  screen.glsl
rs-VoxelSandBox/src/display/shader/: mod.rs
rs-VoxelSandBox/src/display/shader/chunk/: chunk.frag  chunk.glsl  chunk.vert  mod.rs
rs-VoxelSandBox/src/display/shader/screen/: mod.rs
rs-VoxelSandBox/src/display/text/: mod.rs  renderer.rs  text.glsl
rs-VoxelSandBox/src/domain/: chunk.rs  face.rs  game.rs  handles.rs  mod.rs  tile.rs  traits.rs  world.rs
rs-VoxelSandBox/src/render/: mod.rs
rs-VoxelSandBox/src/render/shader/: mod.rs
rs-VoxelSandBox/src/render/shader/chunk/: chunk.frag  chunk.vert  mod.rs
rs-VoxelSandBox/src/render/shader/screen/: mod.rs
rs-VoxelSandBox/src/shaders/block/: mod.rs  shader.vert
rs-VoxelSandBox/src/world/: chunk.rs  mod.rs
