[package]
name = "duplicate-detector"
version = "0.1.0"
edition = "2024"

[profile.dev]
incremental = true
opt-level = 1      # makes it (unironically) 10× faster 

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
