[package]
name = "duplicate-detector"
version = "0.1.0"
edition = "2024"

[profile.dev]
strip = false
incremental = true
opt-level = 1      # unironically makes it 10× faster 
panic = "unwind"
lto = false

[profile.release]
strip = true
incremental = false
opt-level = 3
panic = "abort"
lto = true

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.27", features = ["derive"] }
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
strum = { version = "0.26.3", features = ["derive"] }
thiserror = "2.0.11"
url = { version = "2.5.4", features = ["serde"] }
