[package]
name = "midimlc"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1
incremental = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.39", features = ["derive"] }
midir = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
url = "2.5.4"
