[package]
name = "srpg-arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
cursive = { version = "0.20.0", default-features = false, features = ["crossterm-backend"]}
derive_builder = "0.13.0"
num = "0.4.1"
thiserror = "1.0.56"
