[package]
name = "srpg-arena"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.18"
rand = "0.8.5"

[profile.release]
# considering the number crunching, this is important for correctness
overflow-checks = true
