[package]
name = "srpg-arena"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
strip = false
incremental = true
opt-level = 1      # unironically makes it 10× faster 
panic = "unwind"
lto = false

[profile.release]
strip = true
incremental = false
opt-level = 3
panic = "abort"
lto = true

[dependencies]
anyhow = "1.0.95"
arrayvec = "0.7.6"
derive_more = "0.99.18"
num-traits = "0.2.19"
rand = "0.8.5"
serde_bytes = "0.11.17"
thiserror = "2.0.11"

[dependencies.serde]
version = "1.0.219"
features = ["derive"]

[dependencies.egui]
version = "0.31.1"
features = ["serde"]

[dependencies.eframe]
version = "0.31.1"
default-features = false
features = ["default_fonts", "glow"]
