[package]
name = "voxelsandbox"
version = "0.1.0"
edition = "2024"

############
# Profiles #
############

[profile.dev]
incremental = true

[profile.release]
strip-symbols = true

################
# dependencies #
################

[dependencies.anyhow] # for "engine" errors
version = "1.0.93"

[dependencies.glam] # for CG math
version = "0.29.2"

[dependencies.glium] # for stateless OpenGL
version = "0.36.0"

[dependencies.image] # for loading pngs
version = "0.25.5"
features = ["png"]

[dependencies.thiserror] # for in-game errors
version = "2.0.3"

[dependencies.winit] # for input events
version = "0.30.5"
