[package]
name = "voxelsandbox"
version = "0.1.0"
edition = "2024"

############
# Profiles #
############

[profile.dev]
incremental = true

[profile.release]
strip-symbols = true

################
# dependencies #
################

[dependencies]
anyhow = "1.0.93"
glam = "0.29.2"
glium = "0.36.0"
num-traits = "0.2.19"
rand = "0.8.5"
thiserror = "2.0.3"
winit = "0.30.5"

[dependencies.image]
version = "0.25.5"
features = ["png"]
